# random-number

./: .gitignore  MANIFEST.in  Pipfile  README.md  pypackage_convert.py  pyproject.toml  randnumber.py  randnumber2.py  random-number.rb.j2  requirements-setup.txt  requirements.txt  resources.txt  setup.py  test.txt
.github/workflows/: deletereleases.yaml  develop.yaml  jekyll-gh-pages.yml  layout.md  lint.yaml  mactest.yaml  merge.yaml  release.yaml  release.yaml.bak  test.yaml  testpdoc.yaml
docs/Scripts/: README.md  index.md
docs/Scripts/atlas/: atlas2.md  atlasnumber.md  index.md  isprime.md
docs/Scripts/primary/: index.md  randnumber.md  randnumber2.md
docs/_site/: 404.html  index.html  search.html  sitemap.xml
docs/_site/test/: avatar.html  codes.html  emoji.html  fonts.html  gist.html  index.html  markdown.html  mathjax.html  mentions.html  mermaid.html  toasts.html  utilities.html
docs/_site/test_long/: index.html
docs/_site/test_long/folder1/: file1.html  file2.html  file3.html  index.html
docs/manual/: README.md
docs/manual/markdown-examples/: README.md
docs/onboard/: README.md  environments.md  tools.md
docs/test/: README.md
docs/test/subfolder/: README.md  subfile.md
packaging/: pypackage_convert.py  scriptsetup.py
scripts/: randnumber.py  randnumber2.py
setup-requirements/: requirements.txt
src/: domath2.py
src/atlas/: atlas2.py  atlasnumber.py  domath.py  isprime.py
src/classes/: math.py
src/primary/: randnumber.py  randnumber2.py
src/scripts/: atlas2.py  class_math.py  domath.py  domath2.py  randnumber2.py
src/tools/: domath2.py
src/tools_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
templates/: README.md  README.md.j2  pyproject.toml.j2  random-number-dev.rb.j2  random-number.rb.j2  setup.cfg.j2  setup.py.j2
(+16 files in other folders)
