[tool.poetry.scripts]
randnumber = 'random-number.randnumber:main'
randnumber2 = 'random-number.randnumber2:main'

[tool.poetry]
name = "random-number"
version = "v1.2.40"
description = ""
authors = ["Michael Einreinhof <michael@einreinhof.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"